force-app/main/default/objects/Viagem__c/Viagem__c.object-meta.xml
<CustomObject>
    <label>Viagem</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Viagens</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>