force-app/main/default/objects/Viagem__c/fields/Classificacao__c.field-meta.xml
<CustomField>
    <fullName>Classificacao__c</fullName>
    <formula>IF(Trajetos_aereos__c &gt; 0 &amp;&amp; (DATEVALUE(Primeiro_trajeto__c) -  DATEVALUE(CreatedDate)) &gt;= 30, &apos;Planejado&apos;, 
IF(Trajetos_aereos__c &gt; 0 &amp;&amp; (DATEVALUE(Primeiro_trajeto__c) -  DATEVALUE(CreatedDate)) &lt; 30 &amp;&amp; (DATEVALUE(Primeiro_trajeto__c) -  DATEVALUE(CreatedDate)) &gt; 15, &apos;Urgente&apos;,
IF(Trajetos_aereos__c &gt; 0 &amp;&amp; (DATEVALUE(Primeiro_trajeto__c) -  DATEVALUE(CreatedDate)) &lt; 15 , &apos;Extremamente urgente&apos;,
  
IF(Trajetos_aereos__c = 0 &amp;&amp; (DATEVALUE(Primeiro_trajeto__c) -  DATEVALUE(CreatedDate)) &gt;= 15, &apos;Planejado&apos;, 
IF(Trajetos_aereos__c = 0 &amp;&amp; (DATEVALUE(Primeiro_trajeto__c) -  DATEVALUE(CreatedDate)) &lt; 15 &amp;&amp; (DATEVALUE(Primeiro_trajeto__c) -  DATEVALUE(CreatedDate)) &gt; 3, &apos;Urgente&apos;,
IF(Trajetos_aereos__c = 0 &amp;&amp; (DATEVALUE(Primeiro_trajeto__c) -  DATEVALUE(CreatedDate)) &lt; 3 , &apos;Extremamente urgente&apos;, 

&apos;&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classificação</label>
    <type>Text</type>
</CustomField>