force-app/main/default/objects/Viagem__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conta destino</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Viagens</relationshipLabel>
    <relationshipName>Viagens</relationshipName>
    <type>Lookup</type>
</CustomField>