force-app/main/default/objects/Viagem__c/fields/Contagem_requisicoes_passagem__c.field-meta.xml
<CustomField>
    <fullName>Contagem_requisicoes_passagem__c</fullName>
    <label>Contagem requisições passagem</label>
    <summaryFilterItems>
        <field>Transacao__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Requisição</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transacao__c.Categoria__c</field>
        <operation>equals</operation>
        <value>Passagem</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transacao__c.Valor__c</field>
        <operation>equals</operation>
        <value>10000000</value>
    </summaryFilterItems>
    <summaryForeignKey>Transacao__c.Viagem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>