force-app/main/default/objects/Viagem__c/fields/Contagem_viajantes_passagem__c.field-meta.xml
<CustomField>
    <fullName>Contagem_viajantes_passagem__c</fullName>
    <label>Contagem viajantes passagem</label>
    <summarizedField>Trajeto__c.Passageiros__c</summarizedField>
    <summaryFilterItems>
        <field>Trajeto__c.Passagem__c</field>
        <operation>notEqual</operation>
        <value>Não</value>
    </summaryFilterItems>
    <summaryForeignKey>Trajeto__c.Viagem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>