force-app/main/default/objects/Viagem__c/fields/Contagem_viajantes_responsavel__c.field-meta.xml
<CustomField>
    <fullName>Contagem_viajantes_responsavel__c</fullName>
    <label>Contagem viajantes responsável</label>
    <summaryFilterItems>
        <field>Viajante__c.Respons_vel_financeiro__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Viajante__c.Viagem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>