force-app/main/default/objects/Viagem__c/fields/Dias_vencidos__c.field-meta.xml
<CustomField>
    <fullName>Dias_vencidos__c</fullName>
    <formula>IF((TODAY() -   Vencimento_prestacao_de_conta__c)
 &gt; 0, (TODAY() -   Vencimento_prestacao_de_conta__c)
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias vencidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>