force-app/main/default/objects/Viagem__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evento</fullName>
            </value>
            <value>
                <fullName>Visita Comercial</fullName>
            </value>
            <value>
                <fullName>Pregão/Licitação</fullName>
            </value>
            <value>
                <fullName>Atendimento Técnico</fullName>
            </value>
            <value>
                <fullName>Demonstração</fullName>
            </value>
            <value>
                <fullName>Entrega</fullName>
            </value>
            <value>
                <fullName>Instalação</fullName>
            </value>
            <value>
                <fullName>Treinamento</fullName>
            </value>
            <value>
                <fullName>Reunião</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>