force-app/main/default/objects/Viagem__c/fields/nome_do_proprietario__c.field-meta.xml
<CustomField>
    <fullName>nome_do_proprietario__c</fullName>
    <formula>Owner:User.Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nome do proprietario</label>
    <type>Text</type>
</CustomField>