force-app/main/default/objects/Viagem__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Viagens</relationshipLabel>
    <relationshipName>Viagens</relationshipName>
    <type>Lookup</type>
</CustomField>