force-app/main/default/objects/Viagem__c/fields/Planejamento_de_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Planejamento_de_Auditoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planejamento de Auditoria</label>
    <referenceTo>Plano_de_Auditoria__c</referenceTo>
    <relationshipLabel>Viagens</relationshipLabel>
    <relationshipName>Viagens</relationshipName>
    <type>Lookup</type>
</CustomField>