force-app/main/default/objects/Viagem__c/fields/Primeiro_trajeto__c.field-meta.xml
<CustomField>
    <fullName>Primeiro_trajeto__c</fullName>
    <label>Primeiro trajeto</label>
    <summarizedField>Trajeto__c.Saida_da_origem__c</summarizedField>
    <summaryForeignKey>Trajeto__c.Viagem__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>