force-app/main/default/objects/Viagem__c/fields/Quantidade_de_viajantes__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_viajantes__c</fullName>
    <label>Quantidade de viajantes</label>
    <summaryForeignKey>Viajante__c.Viagem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>