force-app/main/default/objects/Viagem__c/fields/Respons_vel_Financeiro__c.field-meta.xml
<CustomField>
    <fullName>Respons_vel_Financeiro__c</fullName>
    <label>Responsável Financeiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>