force-app/main/default/objects/Viagem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em rascunho</fullName>
                <default>true</default>
                <label>Em rascunho</label>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Reprovada</fullName>
            </value>
            <value>
                <fullName>Aguardando adiantamento</fullName>
            </value>
            <value>
                <fullName>Aguardando agenda</fullName>
            </value>
            <value>
                <fullName>Em viagem</fullName>
            </value>
            <value>
                <fullName>Em prestação de contas</fullName>
            </value>
            <value>
                <fullName>Análise do supervisor</fullName>
            </value>
            <value>
                <fullName>Em quitação de valores</fullName>
            </value>
            <value>
                <fullName>Concluída</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Aguardando reservas</fullName>
                <isActive>false</isActive>
                <label>Aguardando reservas</label>
            </value>
            <value>
                <fullName>Em cotação</fullName>
                <isActive>false</isActive>
                <label>Em cotação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>