force-app/main/default/objects/Viagem__c/fields/Tipo_de_deslocamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_deslocamento__c</fullName>
    <label>Tipo de deslocamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terrestre (Carro/Ônibus)</fullName>
            </value>
            <value>
                <fullName>Aéreo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>