force-app/main/default/objects/Viagem__c/fields/Total_quitado__c.field-meta.xml
<CustomField>
    <fullName>Total_quitado__c</fullName>
    <label>Total quitado</label>
    <summarizedField>Transacao__c.Valor__c</summarizedField>
    <summaryFilterItems>
        <field>Transacao__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Quitação</value>
    </summaryFilterItems>
    <summaryForeignKey>Transacao__c.Viagem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>