force-app/main/default/objects/Viagem__c/fields/Trajetos_aereos__c.field-meta.xml
<CustomField>
    <fullName>Trajetos_aereos__c</fullName>
    <label>Trajetos aéreos</label>
    <summaryFilterItems>
        <field>Trajeto__c.Tipo_de_deslocamento__c</field>
        <operation>equals</operation>
        <value>Aéreo</value>
    </summaryFilterItems>
    <summaryForeignKey>Trajeto__c.Viagem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>