force-app/main/default/objects/Viagem__c/fields/Vencimento_prestacao_de_conta__c.field-meta.xml
<CustomField>
    <fullName>Vencimento_prestacao_de_conta__c</fullName>
    <formula>Data_de_chegada__c + 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencimento da prestação de contas</label>
    <type>Date</type>
</CustomField>