force-app/main/default/objects/Viagem__c/validationRules/Analise_do_supervisor.validationRule-meta.xml
<ValidationRule>
    <fullName>Analise_do_supervisor</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
PRIORVALUE(Status__c) = &apos;Em prestação de contas&apos;,
!ISPICKVAL(Status__c, &apos;Análise do supervisor&apos;)
)</errorConditionFormula>
    <errorMessage>Status &quot;Em prestação de contas&quot; altera apenas para &quot;Análise do supervisor&quot;</errorMessage>
</ValidationRule>