force-app/main/default/objects/Viagem__c/validationRules/Conclusao_da_Viagem_Financeiro.validationRule-meta.xml
<ValidationRule>
    <fullName>Conclusao_da_Viagem_Financeiro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
$User.Id &lt;&gt; &quot;0055A000008leOe&quot;,  
ISPICKVAL(Status__c,&quot;Concluída&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Apenas o financeiro pode concluir o processo de viagem, escolha outro status ou solicite auxilio ao financeiro.</errorMessage>
</ValidationRule>