force-app/main/default/objects/Viagem__c/validationRules/conta_preencher.validationRule-meta.xml
<ValidationRule>
    <fullName>conta_preencher</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	ISBLANK(Conta__c),
	TEXT(Motivo__c)!=&apos;Evento&apos;
)</errorConditionFormula>
    <errorDisplayField>Conta__c</errorDisplayField>
    <errorMessage>A conta deve ser preenchida.</errorMessage>
</ValidationRule>