force-app/main/default/objects/Viagem__c/validationRules/observacoes_evento_preencher.validationRule-meta.xml
<ValidationRule>
    <fullName>observacoes_evento_preencher</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	TEXT(Motivo__c) == &apos;Evento&apos;,
	Observacoes__c == null
)</errorConditionFormula>
    <errorDisplayField>Observacoes__c</errorDisplayField>
    <errorMessage>Preencha nas observações os detalhes do evento.</errorMessage>
</ValidationRule>