force-app/main/default/objects/Viagem__c/validationRules/Urgente.validationRule-meta.xml
<ValidationRule>
    <fullName>Urgente</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Urgente__c = true,
Justificativa__c = null
)</errorConditionFormula>
    <errorDisplayField>Justificativa__c</errorDisplayField>
    <errorMessage>Insira a justificativa para viagens com urgência.</errorMessage>
</ValidationRule>