force-app/main/default/objects/Viagem__c/listViews/Em_aprova_o.listView-meta.xml
<ListView>
    <fullName>Em_aprova_o</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Conta__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Departamento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Em aprovação</value>
    </filters>
    <label>Em aprovação</label>
</ListView>