force-app/main/default/objects/Viagem__c/listViews/Minhas_Viagens2.listView-meta.xml
<ListView>
    <fullName>Minhas_Viagens2</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Motivo__c</columns>
    <columns>Status__c</columns>
    <columns>Departamento__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Minhas Viagens</label>
</ListView>