force-app/main/default/objects/Viagem__c/listViews/Todas_Viagens.listView-meta.xml
<ListView>
    <fullName>Todas_Viagens</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Motivo__c</columns>
    <columns>Status__c</columns>
    <columns>Departamento__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Em prestação de contas</value>
    </filters>
    <label>Todas viagens</label>
</ListView>